styles.css
* {
    color: white;
    background: black;
    box-sizing: border-box;
}

body{
    display:flex;
    flex-direction:column;
    flex-wrap: wrap;
   
    
}
.topnav {
    margin-top:2%;
    overflow: hidden;
    float: right;
}

.topnav a {

    text-align: center;
    display: inline;
    font-size: 18px;
    padding: 1rem 1rem;
    text-decoration: none;
    float:right;


}

span{
    text-align: center;
    display: inline;
    font-size: 18px;
    padding: 0.5rem;
    text-decoration: none;
    float:left;
   border: 1px solid white;
    margin-left: 1rem;
    margin-top:1rem;
}

.topnav a.active {
    font-weight: bold;

}


.topnav .icon {
    display: none;
}

.topnav .closebtn {
    display: none;
}

/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 600px) {
    .topnav a {
        display: none;
    }

    .topnav a.icon {
        float: right;
        display: block;
    }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 600px) {
    .topnav.responsive {
        position: relative;
    }

    .topnav.responsive a.icon {
        position: absolute;
        right: 0;
        top: 0;
    }

    .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
    #right-image{
        width:100%;
    }
   
}

.container {
  
    display: flex;
    flex-direction: row;
    
    flex-wrap:wrap;
    
}

.top-left {
   
    display: flex;
    flex-direction: column;
    margin-top:2%;
    margin-left:5%;
    padding-left: 1rem;
}

.top-left p {
    width: 250px;
}



#right-image {
    margin-top:2%;
    margin-left:8%;
   width:50%;
    z-index:1;
}

.card{
    display:flex;
    flex-direction: column;
   
    width:50vh;
    height:25vh;
    z-index:2;
    position: absolute;
    top:82%;
    left:55%;
   }

.card-column{
    display:flex;
    flex-direction: row;
    padding-top:0.5rem;
    padding-left:1rem;
}
#designer-image{
   
    width:10vh;
    border-radius: 50%;
   
   
}
.card-row{
padding-left:1rem;
padding-top:0.5rem;
letter-spacing: 1px;
font-size:large;
margin-bottom: 0;
padding-bottom: 0;;
}


.card p{
    font-weight: bold;
    padding:0rem 1rem;
    font-size:1.5rem;
    width: fit-content;
}
footer{
    position: absolute;
    text-align: center;
    bottom:0%;
} 

